--- a/application/homeapi/view/auction/special_auction.html
+++ b/application/homeapi/view/auction/special_auction.html
@@ -1,6 +1,6 @@
 {include file="public/header" title="特价拍卖" bundle="home" hasBanner="true" activeNav="home" /}
 
-<main class="o-wrapper">
+<main class="o-wrapper main-wrapper hasSearch">
   <!--顶部广告-->
   {include file="public/top_ads" /}
   <div class="container">
