--- a/application/homeapi/view/brand_models/brand_models_detail.html
+++ b/application/homeapi/view/brand_models/brand_models_detail.html
@@ -1,5 +1,5 @@
 {include file="public/header" title="首页" hasBanner="false" activeNav="brand" /}
-<main class="o-wrapper">
+<main class="o-wrapper main-wrapper">
   <div class="container">
     <section class="brand-models-buy">
       {include file="brand_models/top_banner"/}
