--- a/application/homeapi/view/common/search.html
+++ b/application/homeapi/view/common/search.html
@@ -1,6 +1,6 @@
-{include file="public/header" title="搜索结果" bundle="home" hasBanner="true" /}
+{include file="public/header" title="搜索结果" bundle="home" hasBanner="false" /}
 
-<main class="o-wrapper">
+<main class="o-wrapper main-wrapper">
   <!--顶部广告-->
   {include file="public/top_ads" /}
   <div class="container">
