--- a/application/homeapi/view/index/index.html
+++ b/application/homeapi/view/index/index.html
@@ -1,7 +1,7 @@
 {include file="public/header" title="首页" hasBanner="true" activeNav="home" /}
 
 
-<main class="o-wrapper">
+<main class="o-wrapper main-wrapper hasSearch">
   <!--顶部广告-->
   {include file="public/top_ads" /}
 
