--- a/application/homeapi/view/integral_mall/integral_mall_detail.html
+++ b/application/homeapi/view/integral_mall/integral_mall_detail.html
@@ -1,5 +1,5 @@
 {include file="public/header" title="首页" bundle="brand-models-buy" hasBanner="false" activeNav="integral" /}
-<main class="o-wrapper">
+<main class="o-wrapper main-wrapper">
   <div class="container">
     <section class="integral-mall-detail">
       <div class="product-photos">
