--- a/application/homeapi/view/integral_mall/integral_mall_list.html
+++ b/application/homeapi/view/integral_mall/integral_mall_list.html
@@ -1,5 +1,5 @@
 {include file="public/header" title="积分兑换" bundle="home" hasBanner="true" activeNav="home" /}
-    <main class="o-wrapper">
+    <main class="o-wrapper main-wrapper hasSearch">
       <!--顶部广告-->
       {include file="public/top_ads" /}
       <div class="container">
