--- a/application/homeapi/view/seckill/seckill_detail.html
+++ b/application/homeapi/view/seckill/seckill_detail.html
@@ -1,6 +1,6 @@
 {include file="public/header" title="一元秒杀" bundle="false" hasBanner="false" activeNav="home" /}
 
-    <main class="o-wrapper">
+    <main class="o-wrapper main-wrapper">
       <div class="container">
         <section class="one-dollar-detail">
           <div class="product-photos">
