--- a/application/homeapi/view/usercenter/user_setting.html
+++ b/application/homeapi/view/usercenter/user_setting.html
@@ -1,5 +1,5 @@
 {include file="public/header" title="首页" bundle="user-center" hasBanner="false" activeNav="usercenter" /}
-    <main class="o-wrapper">
+    <main class="o-wrapper main-wrapper">
       <div class="container">
         <section class="user-center">
           <div class="row">
