--- a/application/homeapi/view/integral_mall/integral_mall.html
+++ b/application/homeapi/view/integral_mall/integral_mall.html
@@ -1,6 +1,6 @@
 {include file="public/header" title="特价拍卖" bundle="home" hasBanner="true" activeNav="integral" /}
 
-<main class="o-wrapper">
+<main class="o-wrapper main-wrapper hasSearch">
   <!--顶部广告-->
   {include file="public/top_ads" /}
   <div class="container">
@@ -8,14 +8,14 @@
       <div class="section-title clearfix">
         <h1>积分商城<span class="section-subtitle">免费兑换 | 送货上门</span></h1>
       </div>
-      {notempty name="recommend_car"}
+      <!-- {notempty name="recommend_car"}
       <div class="integral-top">
         <div class="integral-top-img" style="height: 270px; overflow: hidden">
           <img src="{$recommend_car.original_img}" width="100%" alt="">
         </div>
 
         <div class="integral-top-content">
-          <h3><label>{$recommend_car.goods_name}</label> <span>剩余时间: <em class="color-primary">3天23小时55分</em></span></h3>
+          <h3><label>{$recommend_car.goods_name}</label></h3>
           <p>{$recommend_car.goods_remark}</p>
           <div class="clearfix">
             <h3 class="d-inline text-remain">剩余：<label>{$recommend_car.store_count}件</label></h3>
@@ -27,10 +27,10 @@
           </div>
         </div>
       </div>
-      {/notempty}
+      {/notempty} -->
       <div class="product-card-list row">
         {foreach $list as $gd}
-        {if $recommend_car.goods_id!=$gd.goods_id}
+        {if $gd.goods_id}
         <div class="col col-4">
           <div class="product-card">
             <div class="product-card-img">
@@ -39,7 +39,6 @@
             <div class="product-card-content">
               <h2 class="product-card-title">
                 {$gd.goods_name}
-                <span class="float-right">剩余时间:<strong class="color-primary">1天23时22分</strong></span>
               </h2>
               <div class="product-card-intro"><strong>特点：</strong>{$gd.goods_remark}</div>
               <div class="product-card-btm clearfix">
@@ -64,3 +63,9 @@
 </main>
 {include file="public/side_btns" /}
 {include file="public/footer" /}
+<script src="__STATIC__/utils/countdown.js"></script>
+<script>
+  $(function() {
+    $('.countdown-box')
+  })
+</script>
