--- a/application/homeapi/view/parts/parts.html
+++ b/application/homeapi/view/parts/parts.html
@@ -1,6 +1,6 @@
 {include file="public/header" title="首页" bundle="home" hasBanner="true" activeNav="parts" /}
 
-    <main class="o-wrapper">
+    <main class="o-wrapper main-wrapper hasSearch">
       <!--顶部广告-->
       {include file="public/top_ads" /}
 
