--- a/application/homeapi/view/public/footer.html
+++ b/application/homeapi/view/public/footer.html
@@ -2,48 +2,47 @@
   <div class="container">
     <div class="row c-footer-links">
       <div class="col">
-        <h5>品牌天地</h5>
+        <h5>关于众泰</h5>
         <ul>
-          <li><a href="#">集团概述</a></li>
-          <li><a href="#">新闻资讯</a></li>
-          <li><a href="#">技术品牌</a></li>
-          <li><a href="#">企业文化</a></li>
-          <li><a href="#">众泰教育</a></li>
-          <li><a href="#">社会责任</a></li>
+          <li><a href="#">众泰新闻</a></li>
+          <li><a href="#">绿动未来</a></li>
+          <li><a href="#">红色引擎</a></li>
+          <li><a href="#">人才战略</a></li>
         </ul>
       </div>
       <div class="col">
         <h5>热门车型</h5>
         <ul>
+          <li><a href="#">众泰T800</a></li>
+          <li><a href="#">众泰T500</a></li>
+          <li><a href="#">众泰T300</a></li>
           <li><a href="#">众泰T700</a></li>
           <li><a href="#">众泰T600</a></li>
           <li><a href="#">众泰Z300</a></li>
           <li><a href="#">众泰Z700</a></li>
-          <li><a href="#">众泰T700</a></li>
-          <li><a href="#">众泰T700</a></li>
+          <li><a href="#">众泰E200</a></li>
+        </ul>
+      </div>
+      <div class="col">
+        <h5>服务中心</h5>
+        <ul>
+          <li><a href="#">服务商查询</a></li>
+          <li><a href="#">经销商查询</a></li>
+          <li><a href="#">在线客服</a></li>
+          <li><a href="#">售后服务</a></li>
         </ul>
       </div>
       <div class="col">
         <h5>购车支持</h5>
         <ul>
+          <li><a href="#">购车指南</a></li>
           <li><a href="#">预约试驾</a></li>
-          <li><a href="#">经销商查询</a></li>
-          <li><a href="#">市场活动</a></li>
+          <li><a href="#">购车计算器</a></li>
           <li><a href="#">天猫旗舰店</a></li>
         </ul>
       </div>
       <div class="col">
-        <h5>车主服务</h5>
-        <ul>
-          <li><a href="#">服务活动</a></li>
-          <li><a href="#">关爱课堂</a></li>
-          <li><a href="#">服务介绍</a></li>
-          <li><a href="#">服务站查询</a></li>
-          <li><a href="#">G-LINK服务</a></li>
-        </ul>
-      </div>
-      <div class="col">
-        <h5>商务合作</h5>
+        <h5></h5>
         <ul>
           <li><a href="#">众泰研发中心预约</a></li>
           <li><a href="#">众泰汽车招商加盟</a></li>
