--- a/application/homeapi/view/public/header-nav.html
+++ b/application/homeapi/view/public/header-nav.html
@@ -1,4 +1,4 @@
-<header class="o-wrapper c-header {php} echo [hasBanner] ? 'c-header__fixed' : '' {/php}" >
+<header class="o-wrapper c-header" >
   <div class="container clearfix">
     <a class="navbar-brand" href="../index/home.html">
       众泰汽车
@@ -48,7 +48,14 @@
       </li>
     </ul>
   </div>
-
+  {if [hasBanner]}
+  <div class="search-box">
+    <div class="search-box__inner">
+      <input type="text" id="search" value="{$Think.get.title}" placeholder="请输入关键词，例如：众泰T500">
+      <button onclick="location.href='../goods/searchList?title=' + document.getElementById('search').value ">立即搜索</button>
+    </div>
+  </div>
+  {/if}
 </header>
 
 {include file="usercenter/login" /}
