--- a/application/homeapi/view/seckill/seckill.html
+++ b/application/homeapi/view/seckill/seckill.html
@@ -1,7 +1,7 @@
 {include file="public/header" title="一元秒杀" bundle="home" hasBanner="true" activeNav="home" /}
 
 
-    <main class="o-wrapper">
+    <main class="o-wrapper main-wrapper hasSearch">
       <!--顶部广告-->
       {include file="public/top_ads" /}
       <div class="container">
