--- a/application/homeapi/view/parts/parts_detail.html
+++ b/application/homeapi/view/parts/parts_detail.html
@@ -116,7 +116,7 @@
       </div>
       <div class="product-detail__wrapper">
         <div class="product-detail">
-          <div class="product-detail__left" style="background-image:url('{$data.banner[0][ad_code]}')">
+          <div class="product-detail__left" style="background-image:url('{$data.banner[0]['ad_code']}')">
             {if $data.video}
             <video src="{$data.video}" ></video>
             {/if}
