--- a/application/homeapi/view/public/side_btns.html
+++ b/application/homeapi/view/public/side_btns.html
@@ -80,7 +80,15 @@
   </div>
 </div>
   
-
+<style>
+  #dealerList li{
+    border-bottom: 1px solid #dedede;
+    padding: 10px;
+  }
+  #dealerList li p {
+    margin-bottom: 5px;
+  }
+</style>
 <div class="modal fade" id="locationModal"  data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="telForm" aria-hidden="true">
   <div class="modal-dialog" style="max-width:680px" role="document">
     <div class="modal-content">
@@ -92,35 +100,106 @@
           <img src="__STATIC__/assets/images/common/icon-close.png" alt="">
         </div>
       </div>
-      <div class="modal-body sign-body p-3">
+      <div class="modal-body sign-body p-3" style="height:500px;">
         <form action="">
           <div class="form-row">
             <div class="form-group col-md-4">
-              <select class="form-control selectpicker">
+              <select class="form-control selectpicker" onchange="getProvinceInline(this)" id="loc-typelist">
                 <option selected>选择车型</option>
-                <option>Z360</option>
               </select>
             </div>
             <div class="form-group col-md-4">
-              <select class="form-control selectpicker">
+              <select class="form-control selectpicker" onchange="getCityInline(null, this)" id="loc-province">
                 <option selected>请选择</option>
-                <option>北京市</option>
               </select>
             </div>
             <div class="form-group col-md-4">
-              <select class="form-control selectpicker">
+              <select class="form-control selectpicker" id="loc-city">
                 <option selected>请选择</option>
-                <option>直辖市</option>
               </select>
             </div>
           </div>
           <div class="text-center">
-              <a href="javascript:void(0)" class="btn btn-danger btn-sm" >确定</a>
+              <a href="javascript:void(0)" class="btn btn-danger btn-sm" onclick="getSalesInline()">确定</a>
           </div>
         </form>
+        <div class="mt-3">
+          <ul id="dealerList"></ul>
+        </div>
       </div>
     </div>
   </div>
 </div>
 
 {include file="public/test-drive" /}
+
+<script>
+  var hasGetCity = false
+  function getDrivelistInline() {
+    getDrivelist(function(data) {
+      appendOptions('#loc-typelist', data, true)
+    })
+  }
+
+  function getProvinceInline(e) {
+    console.log(e.value)
+    getProvince(function(data) {
+      appendOptions('#loc-province', data)
+      if(!hasGetCity) {
+        getCityInline(data[0].id, null)
+        hasGetCity = true
+      }
+    })
+  }
+  
+  function appendOptions(id, data, isAppend) {
+    var html = ''
+    data.forEach(element => {
+      html+= '<option value='+element.id+'>'+element.name+'</option>'
+    });
+    if(isAppend) {
+      $(id).append(html)
+    } else {
+      $(id).html(html)
+    }
+    $(".selectpicker").selectpicker('refresh')
+  }
+
+  function getCityInline(id, e) {
+    if(id) {
+      getCity(id, function(data) {
+        appendOptions('#loc-city', data)
+      })
+    } else {
+      getCity(e.value, function(data) {
+        appendOptions('#loc-city', data)
+      }) 
+    }
+  }
+
+  function getSalesInline() {
+    var cate_id2 = $('#loc-typelist').val()
+    var province = $('#loc-province').val()
+    var city = $('#loc-city').val()
+
+    querySales({
+      cate: cate_id2,
+      province: province,
+      city: city
+    }, function(data) {
+      if(data instanceof Array && data.length>0) {
+        var html = ''
+        data.forEach(function(element) {
+          html += '<li><h5>'+element.name+'</h5><p>'+element.address+'</p><p>'+element.mobile+'</p></li>'
+        })
+        $('#dealerList').html(html)
+      } else {
+        $('#dealerList').html('<p class="text-center">暂无经销商</p>')
+      }
+    })
+  }
+
+  $(function() {
+    getDrivelistInline()
+  })
+</script>
