--- a/application/homeapi/view/common/search.html
+++ b/application/homeapi/view/common/search.html
@@ -1,4 +1,4 @@
-{include file="public/header" title="搜索结果" bundle="home" hasBanner="false" /}
+{include file="public/header" title="搜索结果" bundle="home" hasBanner="true" /}
 
 <main class="o-wrapper main-wrapper">
   <!--顶部广告-->
