--- a/application/homeapi/view/public/header-nav.html
+++ b/application/homeapi/view/public/header-nav.html
@@ -3,7 +3,7 @@
     <a class="navbar-brand" href="../index/home.html">
       众泰汽车
     </a>
-    <div class="select-city__wrapper">
+    <!-- <div class="select-city__wrapper">
       <select class="selectpicker form-control form-control-sm" data-style="select-city">
         <option>北京</option>
         <option>上海</option>
@@ -11,7 +11,7 @@
         <option>深圳</option>
         <option>杭州</option>
       </select>
-    </div>
+    </div> -->
 
     <ul class="navbar-nav float-right">
       <li><a class="nav-item
