--- a/application/homeapi/view/public/header.html
+++ b/application/homeapi/view/public/header.html
@@ -3,8 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <title>[title] - 众泰商城</title>
-  <link rel="stylesheet" property="stylesheet" href="__STATIC__/styles/main.css?v=20190108" type="text/css">
+  <link rel="stylesheet" property="stylesheet" href="__STATIC__/styles/main.css?v=20190110" type="text/css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
+    <script src="http://apps.bdimg.com/libs/html5shiv/3.7/html5shiv.min.js"></script>
+    <script src="http://apps.bdimg.com/libs/respond.js/1.4.2/respond.min.js"></script>
+  <![endif]-->
   <script>document.querySelector('html').classList.remove('no-js');</script>
   <script src="__STATIC__/scripts/vendor.js?v=20190108"></script>
   <style>
