--- a/application/homeapi/view/auction/special_auction.html
+++ b/application/homeapi/view/auction/special_auction.html
@@ -82,7 +82,8 @@
           var res = JSON.parse(data)
           var arr = res.data.list
           var html = ''
-          arr.forEach(function(element) {
+          for(var x in arr) {
+            var element = arr[x]
             var text = !{$Think.get.is_start} ? (element.start_time + ' 开始') : ('预计 '+ element.end_time +' 结束')
             html +=  '<div class="col col-4">\n' +
               '            <div class="product-card">\n' +
@@ -105,9 +106,8 @@
               '              </div>\n' +
               '            </div>\n' +
               '          </div>'
-          })
-  
-            $('.loader').hide();
+          } 
+          $('.loader').hide();
           $('.product-card-list').html(html);
         }
       })
