--- a/application/homeapi/view/brand_models/brand_models_detail.html
+++ b/application/homeapi/view/brand_models/brand_models_detail.html
@@ -142,7 +142,7 @@
             </div>
           </div>
 
-          <div class="form-layout">
+          <!-- <div class="form-layout">
             <div class="form-item row">
               <div class="form-item-label col-1">
                 <label>积分抵扣：</label>
@@ -168,7 +168,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
       <div>
