--- a/application/homeapi/view/public/footer.html
+++ b/application/homeapi/view/public/footer.html
@@ -54,7 +54,7 @@
   </div>
   <div class="copyright text-center">Copyright &copy; 2018 www.zhongtia.com All Rights Reserved</div>
 </footer>
-
+<script src="https://cdn.bootcss.com/babel-polyfill/7.2.5/polyfill.min.js"></script>
 <script src="__STATIC__/scripts/common.bundle.js?v=20190108"></script>
 {notempty name="bundle"} 
   <script src="__STATIC__/scripts/{$bundle}.bundle.js?v=20190108"></script>
