--- a/application/homeapi/view/integral_mall/integral_mall.html
+++ b/application/homeapi/view/integral_mall/integral_mall.html
@@ -34,7 +34,7 @@
         <div class="col col-4">
           <div class="product-card">
             <div class="product-card-img">
-              <a href="#"><img src="{$gd.original_img}" width="100%" style="height: auto" alt=""></a>
+              <a href="../integral/integral_mall_detail.html?goods_id={$gd.goods_id}"><img src="{$gd.original_img}" width="100%" style="height: auto" alt=""></a>
             </div>
             <div class="product-card-content">
               <h2 class="product-card-title">
@@ -63,9 +63,3 @@
 </main>
 {include file="public/side_btns" /}
 {include file="public/footer" /}
-<script src="__STATIC__/utils/countdown.js"></script>
-<script>
-  $(function() {
-    $('.countdown-box')
-  })
-</script>
