--- a/application/homeapi/view/integral_mall/integral_mall_list.html
+++ b/application/homeapi/view/integral_mall/integral_mall_list.html
@@ -57,7 +57,7 @@
                 <div class="product-card-content">
                   <h2 class="product-card-title">
                     {$gd.goods_name}
-                    <span class="float-right">剩余时间:<strong class="color-primary">1天23时22分</strong></span>
+                    <!-- <span class="float-right">剩余时间:<strong class="color-primary">1天23时22分</strong></span> -->
                   </h2>
                   <div class="product-card-intro"><strong>特点：</strong>{$gd.goods_remark}</div>
                   <div class="product-card-btm clearfix">
